--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --type-check",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ngu-sw-manifest": "node ./node_modules/ng-pwa-tools/bin/ngu-sw-manifest.js --module src/app/app.module.ts --out dist/ngsw-manifest.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.3.6",
     "@angular/router": "^4.0.0",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng-pwa-tools": "0.0.15",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
